--- a/index.html
+++ b/index.html
@@ -3,76 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Mim - [Seu Nome]</title>
+    <title>Nikolas Yohan</title>
     <link rel="stylesheet" href="style.css"> </head>
 <body>
 
     <header class="hero-section">
-        <h1>Olá, eu sou [Seu Nome]</h1>
-        <p class="subtitle">[Sua Frase de Efeito ou Título Principal - Ex: Desenvolvedor Front-end | Designer Criativo | Especialista em Marketing]</p>
+        <h1>Olá, meu nome é Nikolas</h1>
+        <p class="subtitle">Iniciante em Front-End , Estudante ensino médio , apenas isto</p>
     </header>
 
     <main class="about-container">
 
         <section class="section-card summary">
-            <h2>🌍 Quem Eu Sou</h2>
+            <h2>Quem sou eu?</h2>
             <p>
-                [Parágrafo curto e de impacto que resume você. Mencione sua paixão, o que você faz de melhor e há quanto tempo. Ex: Sou um desenvolvedor web apaixonado por transformar ideias complexas em interfaces de usuário simples e elegantes. Com 5 anos de experiência, meu foco é em performance e acessibilidade.]
+                Sou um Jovem de 16 anos, Cursando primeiro ano com técnico em Desenvolvimento de Sistemas, iniciante em Programação Front-End sempre tentando melhorar! 1 ano de experiência em HTML e CSS 
             </p>
         </section>
 
         <section class="section-card expertise">
-            <h2>🛠️ O Que Eu Faço (Minha Especialidade)</h2>
+            <h2>Minhas habilidades</h2>
             <ul>
                 <li>
-                    <strong>[Área 1]:</strong> [Breve descrição. Ex: Desenvolvimento Front-end com React e Vue.js, criando Single Page Applications (SPAs).]
+                    <strong>1:</strong> Desenvolvimento Front-End com HTML e CSS (iniciando Javascript)
                 </li>
                 <li>
-                    <strong>[Área 2]:</strong> [Breve descrição. Ex: UI/UX Design, focando em wireframes, protótipos de alta fidelidade e testes de usabilidade.]
+                    <strong>2:</strong> Sabedoria em ferramentas Microsoft (EX: Word, Excel, Powerpoint, etc.)
                 </li>
                 <li>
-                    <strong>[Área 3]:</strong> [Breve descrição. Ex: Criação de Conteúdo para Mídias Sociais, gerenciando calendários e otimizando engajamento.]
+                    <strong>3:</strong> Bilingue fluente em Inglês
                 </li>
             </ul>
         </section>
 
         <section class="section-card background">
-            <h2>📜 Minha Jornada</h2>
+            <h2>Jornada</h2>
             <div class="timeline">
                 <div class="timeline-item">
-                    <h3>[Ano/Período] - [Cargo ou Título]</h3>
-                    <p><strong>[Empresa ou Instituição]</strong></p>
-                    <p>[Uma linha sobre a principal conquista ou aprendizado. Ex: Liderança do projeto X, resultando em um aumento de 30% na conversão.]</p>
+                    <h3>1* Ano do Ensino Médio</h3>
+                    <p><strong>ETEC Polivalente</strong></p>
+                    <p>Liderança de um projeto sobre evangelhismo escolar, capacitando pessoas a conhecerem mais sobre Jesus</p>
+                    <p>(mais está por vir)</p>
                 </div>
-                <div class="timeline-item">
-                    <h3>[Ano/Período] - [Certificação ou Formação]</h3>
-                    <p><strong>[Instituição]</strong></p>
-                    <p>[Ex: Graduação em Ciência da Computação, especializando-se em arquitetura de software.]</p>
-                </div>
-            </div>
         </section>
 
         <section class="section-card hobbies">
-            <h2>💡 Fora do Trabalho</h2>
+            <h2>Hobbies</h2>
             <p>
-                [Mencione hobbies, interesses ou valores pessoais para humanizar a página. Ex: Quando não estou codificando, você pode me encontrar na trilha, lendo sobre história ou tentando aperfeiçoar a receita de pão artesanal.]
+                Quando você não me vê codificando, estou provavelmente tocando guitarra ou jogando basquete (sou muito amador rs)
             </p>
         </section>
 
         <section class="section-card contact">
-            <h2>📞 Vamos Conectar?</h2>
-            <p>Se você tem um projeto em mente ou apenas quer trocar ideias, sinta-se à vontade para entrar em contato:</p>
+            <h2>Fale comigo!</h2>
+            <p>Se você se interessou minimamente por mim e quiser me contratar, sinta-se a vontade :]</p>
             <div class="contact-links">
-                <a href="mailto:seuemail@exemplo.com" class="button primary">Enviar E-mail</a>
-                <a href="https://linkedin.com/in/seuperfil" class="button secondary" target="_blank">LinkedIn</a>
-                <a href="https://github.com/seuperfil" class="button secondary" target="_blank">GitHub</a>
+                <a href="mailto:yohan.nikolass@gmail.com" class="button primary">E-mail</a>
+                <a href="https://github.com/yohannikolass" class="button secondary" target="_blank">GitHub</a>
             </div>
         </section>
 
     </main>
 
     <footer>
-        <p>&copy; [Ano Atual] [Seu Nome]. Todos os direitos reservados.</p>
+        <p>&copy; 2025 NYBT. Todos os direitos reservados.</p>
     </footer>
 
 </body>
