updated section timeline

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
                     <h3>1* Ano do Ensino Médio</h3>
                     <p><strong>ETEC Polivalente</strong></p>
                     <p>Liderança de um projeto sobre evangelhismo escolar, capacitando pessoas a conhecerem mais sobre Jesus</p>
-                    <p>(mais está por vir)</p>
                 </div>
+            <h4>(mais coisas estão por vir)</h4>
         </section>
 
         <section class="section-card hobbies">
             <h2>Hobbies</h2>
             <p>
-                Quando você não me vê codificando, estou provavelmente tocando guitarra ou jogando basquete (sou muito amador rs)
+                Quando você não me vê codificando, estou provavelmente tocando guitarra ou jogando basquete (sou muito ruim rs)
             </p>
         </section>
 
