troquei o acento no bilingue

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <strong>2:</strong> Sabedoria em ferramentas Microsoft (EX: Word, Excel, Powerpoint, etc.)
                 </li>
                 <li>
-                    <strong>3:</strong> Bilingue fluente em Inglês
+                    <strong>3:</strong> Bilíngue fluente em Inglês
                 </li>
             </ul>
         </section>
