delete expertise li:before e rotacionei o titulo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <header class="hero-section">
-        <h1>Olá, meu nome é Nikolas</h1>
+        <h1 id="name-spin">Olá, meu nome é Nikolas</h1>
         <p class="subtitle">Iniciante em Front-End , Estudante ensino médio , apenas isto</p>
     </header>
 
